move ModificationTree to core-impl (part of IJPL-234343)
GitOrigin-RevId: 836ccbd4b1211ff68036c9606ed6be3a0927729b